# ActionsetDisplay

./: .gitignore  app.py  config.toml  launch_application.ps1  pyproject.toml  readme.md  setup_environment.ps1
app/: app.py  build_app.py  config.toml
data/: config.txt
src/steam_actionset_display/: actionset_manager.py  game_detection.py  input_reader.py  process_detection.py
src/steam_actionset_display/data/: __init__.py
src/steam_actionset_display/frontends/: base.py  toast_output.py  tts_output.py
src/steam_actionset_display/notifier/: base.py  toast.py  tts.py
